# coin_behavioral_factor

./: OHLCV_coin-final-Copy2.ipynb  README.md  binance_futures.csv  pyproject.toml
backtest_results/: capital_gain_overhang_10pct_value_weighted.csv  max_return_10pct_equal_weighted.csv  max_return_20pct_value_weighted.csv  max_return_30pct_value_weighted.csv  momentum_10pct_equal_weighted.csv  momentum_20pct_value_weighted.csv  momentum_30pct_equal_weighted.csv  momentum_entry10pct_no_retain_equal_weighted.csv  momentum_entry10pct_retain20pct_equal_weighted.csv  potential_return_10pct_equal_weighted.csv  potential_return_20pct_equal_weighted.csv  potential_return_30pct_value_weighted.csv  ratio_to_high_10pct_equal_weighted.csv  ratio_to_high_20pct_value_weighted.csv  ratio_to_high_30pct_equal_weighted.csv  salience_10pct_value_weighted.csv  salience_20pct_value_weighted.csv  salience_30pct_value_weighted.csv  tk_value_10pct_equal_weighted.csv  tk_value_20pct_value_weighted.csv  tk_value_30pct_value_weighted.csv  ts_momentum_10pct_equal_weighted.csv  ts_momentum_20pct_equal_weighted.csv  ts_momentum_30pct_equal_weighted.csv  ts_momentum_directional_10pct_equal_weighted.csv
backtest_results_combined/: combined_strategy_logs.csv  combined_z_20pct_equal_weighted.csv
