[tool.poetry]
name = "gogumgae-202402"
version = "0.1.0"
description = ""
authors = ["jaepil-choi.laptop <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
nest-asyncio = "^1.6.0"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
ccxt = "^4.4.23"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
